[package]
name = "tanour-server"
version = "0.2.0"
authors = ["Pactus blockchain <admin@pactus.org>"]
edition = "2021"

build = "src/build.rs"

[[bin]]
name = "tanour"
path = "src/main.rs"

[build-dependencies]
capnpc = { git = "https://github.com/capnproto/capnproto-rust" }

[dependencies]
capnp =  { git = "https://github.com/capnproto/capnproto-rust" }
capnp-rpc = { git = "https://github.com/capnproto/capnproto-rust" }
futures = "0.3.0"
tokio = { version = "0.2.0", features = ["time", "sync", "rt-util", "rt-core", "net", "macros"]}
tokio-util = { version = "0.3.0", features = ["compat"] }
tanour = { version = "0.2.0", path = "../tanour" }
async-std = "1.5.0"
log = "0.4"
simple_logger = "1.4.0"
