[package]
name = "tanour-server"
version = "0.2.0"
authors = ["Pactus blockchain <admin@pactus.org>"]
edition = "2021"

build = "src/build.rs"

[[bin]]
name = "tanour"
path = "src/main.rs"

[build-dependencies]
capnpc = { git = "https://github.com/capnproto/capnproto-rust" }

[dependencies]
capnp = { git = "https://github.com/capnproto/capnproto-rust" }
capnp-rpc = { git = "https://github.com/capnproto/capnproto-rust" }
futures = "0.3"
tokio = { version = "1.26", features = [
    "time",
    "sync",
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7", features = ["compat"] }
tanour = { version = "0.2.0", path = "../tanour" }
log = "0.4"
simple_logger = "4.0"
