[package]
description = "Tanour"
name = "tanour"
version = "0.3.0"
authors = ["Pactus blockchain <admin@pactus.org>"]
edition = "2021"

[dependencies]
byteorder = "1.3"
log = "0.4"
wasmer = { version = "2.3.0", default-features = false, features = [
    "wat",
    "universal",
    "singlepass",
] }
wasmer-middlewares = "2.3.0"
thiserror = "1.0"
hex = "0.4.3"
loupe = "0.1"
minicbor = { version = "0.18", features = ["std"] }

[dev-dependencies]
simple_logger = "1.4.0"
wat = "1"
test_contract = { path = "../test-contract" }
mockall = "0.10"
blake2 = "0.9"
hex-literal = "0.3"

[lib]
path = "src/lib.rs"
