[package]
description = "Tanour"
name = "tanour"
version = "0.2.0"
authors = ["Pactus blockchain <admin@pactus.org>"]
edition = "2021"

[dependencies]
byteorder = "1.3"
log = "0.4"
wasmer = { version = "4.2.5", default-features = false, features = ["wat", "singlepass"] }
wasmer-middlewares = "4.2.5"
thiserror = "1.0"
hex = "0.4"
mockall = "0.10"

[dev-dependencies]
minicbor = { version = "0.18", features = ["std"] }
simple_logger = "1.4"
wat = "1"
test_contract = { path = "../test-contract" }
blake2 = "0.9"
hex-literal = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"

[lib]
path = "src/lib.rs"
