[package]
name = "test_contract"
version = "0.0.1"
edition = "2018"
authors = ["Zarb development team <admin@zarb.network>"]

[dependencies]
kelk = { version = "0.0.5", git = "https://github.com/zarbchain/kelk", branch = "main"}
minicbor = { version = "0.11", features = ["derive"] }

[lib]
name = "test_contract"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
