[package]
name = "test_contract"
version = "0.2.0"
authors = ["Zarb development team <admin@zarb.network>"]
edition = "2021"

[dependencies]
kelk-env = { version = "0.2.0", git = "https://github.com/zarbchain/kelk", branch = "main"}
minicbor = { version = "0.11", features = ["derive"] }
wee_alloc = { version = "0.4", default-features = false }

[lib]
name = "test_contract"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
