[package]
name = "test_contract"
version = "0.1.0"
authors = ["Pactus blockchain <admin@pactus.org>"]
edition = "2021"

[dependencies]
kelk = { path = "../../kelk/crates/kelk", version = "0.3.0" }
minicbor = { version = "0.18", features = ["derive"] }
blake2 = "0.9"

[lib]
name = "test_contract"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
